--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 
 .top{
-    background-color: #008b8b	;
+    background-color: #3500D3	;
     height: 170px;
     width: 100%;
     }
 
 .bar{
     font-family: Inter;
-    font-size: 38px;
+    font-size: 48px;
     font-weight: 900;
-    margin-top: 126px;
+    margin-top: 110px;
     text-align: center;
-    vertical-align: bottom
+    vertical-align: bottom;
+    font-family: comic sans ms;
+    -webkit-text-stroke: 1px #F5F5F5;
     }
 
 .example{
@@ -19,11 +21,12 @@
     }
     
 .name{  
-    font-size: 52px; 
+    font-size: 62px; 
     margin: 0;
     padding-top: 10px;
     padding-left: 5px;
     font-family: comic sans ms;
+    -webkit-text-stroke: 1.5px #F5F5F5;
 }
 
 .taimer{
@@ -46,7 +49,7 @@
     width: 100%;
     }
 .main{
-    background-color: #A9A9A9;
+    background-color: #323232;
     height: 910px; 
     text-align: center; 
     padding-top: 10%;
