--- a/style.css
+++ b/style.css
@@ -1,25 +1,73 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body class="body">
-    <div class="top">
-        <h2 class="name">Typemonk</h2>
-        <div class="lang">
-            <p class="bar">rus</p>
-            <p class="bar">/</p>
-            <p class="bar">eng</p> 
-        </div>  
-    </div>
-    <div class="main">
-        <textarea class="printed"></textarea>
-        <p class="example">hello </p>
-    </div>
-<script src="file.js"></script>
-</body>
-</html>
+
+.top{
+    background-color: #3500D3	;
+    height: 170px;
+    width: 100%;
+    }
+
+.bar{
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 110px;
+    text-align: center;
+    vertical-align: bottom;
+    font-family: comic sans ms;
+    -webkit-text-stroke: 1px #F5F5F5;
+    }
+
+.example{
+    color: red;
+    height: 300px;
+    width: 900px;
+    margin: 0;
+    padding-top: 70px;
+    position: absolute;
+    }
+    
+.name{  
+    font-size: 62px; 
+    margin: 0;
+    padding-top: 10px;
+    padding-left: 5px;
+    font-family: comic sans ms;
+    -webkit-text-stroke: 1.5px #F5F5F5;
+}
+
+.taimer{
+    text-align: right;
+    }
+
+.body{
+    margin: 0;
+    padding: 0;
+    }
+
+.lang{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    top: 0%;
+    height: 170px;
+    width: 100%;
+    }
+.main{
+    background-color: #323232;
+    height: 910px; 
+    text-align: center; 
+    padding-top: 10%;
+
+    }
+.main p{
+    text-align: center;
+    padding: 0;
+}
+.printed{
+    background-color: #323232;
+    height: 300px;
+    width: 900px;
+    position: relative;
+}
